bpk-lib/crates/core/tests/ui/es_missing_handler.stderr
error[E0599]: no associated function or constant named `does_not_exist` found for struct `State` in the current scope
  --> tests/ui/es_missing_handler.rs:11:34
   |
11 | #[batpak(event = Ping, handler = does_not_exist)]
   |                                  ^^^^^^^^^^^^^^ associated function or constant not found in `State`
12 | struct State {}
   | ------------ associated function or constant `does_not_exist` not found for this struct

error[E0599]: no method named `does_not_exist` found for mutable reference `&mut State` in the current scope
  --> tests/ui/es_missing_handler.rs:11:34
   |
11 | #[batpak(event = Ping, handler = does_not_exist)]
   |                                  ^^^^^^^^^^^^^^ method not found in `&mut State`
